sass/style.scss
$main-background: #1e1e1e;
$main-foreground: #d4d4d4;

$accent-color: #3cc495;

$max-content-width: 600px;

@font-face {
	font-family: 'Iosevka Web';
	font-display: swap;
	font-weight: 300;
	font-stretch: normal;
	font-style: normal;
	src: url('/fonts/iosevka-light.woff2') format('woff2');
}

@font-face {
	font-family: 'Iosevka Web';
	font-display: swap;
	font-weight: 500;
	font-stretch: normal;
	font-style: normal;
	src: url('/fonts/iosevka-medium.woff2') format('woff2');
}

@font-face {
	font-family: 'Iosevka Web';
	font-display: swap;
	font-weight: 700;
	font-stretch: normal;
	font-style: normal;
	src: url('/fonts/iosevka-bold.woff2') format('woff2');
}

body {
    font-family: 'Iosevka Web';
    font-weight: 300;
    margin: 0;
    background-color: $main-background;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 12px;
    gap: 3em;

    & > * {
        max-width: $max-content-width;
    }
}

h1, h2, h3, h4, h5, h6, p, span, li, strong {
    color: $main-foreground;
}

img {
    max-width: 100%;
    box-shadow: -2px 0 0 $accent-color;
}

a {
    color: $accent-color;
}

header {
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 1em;
    border-bottom: 1px solid $accent-color;

    a {
        text-decoration: none;
    }

    h1 {
        color: $main-foreground;
        font-size: 30px;
    }
}

nav {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;

    border-bottom: 1px solid $accent-color;

    a {
        color: $main-foreground;
        text-decoration: none;
        transition: background-color .5s, color .5s;
        padding: 0 20px;
        height: 100%;
        display: flex;
        align-items: center;

        &:hover {
            background-color: rgba(245, 245, 245, 0.123);
        }
    }
}

.section {
    width: 100%;
}

ul.blog-post-list {
    list-style-type: none;
    
    li {
        border-left: 4px solid $accent-color;
        padding: 4px 0 4px 8px;
    }
}

.blog-page-content {
    // These should be code blocks
    pre {
        padding: 4px;
        overflow-x: auto;
    }
}

